<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_ego_agent</name>
  <version>0.0.0</version>
  <description>Transfer Ego Planner output trajectory to control PX4</description>
  <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>px4_msgs</depend>
  <exec_depend>ego_planner</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
